LPA can send notices to interested parties (a start)

--- a/app/views/_includes/appeal-content/appeal-lpa-metadata.html
+++ b/app/views/_includes/appeal-content/appeal-lpa-metadata.html
@@ -21,39 +21,23 @@
         text: 'Appeal reference'
       },
       value: {
-        text: '0166321'
+        text: 'APP/Q9999/D/21/1345172'
       }
     },
     {
       key: {
-        text: 'Appeal site'
+        text: 'Planning application number'
       },
       value: {
-        text: '2 Aubrey House, Aubrey Road, BS3 3EX'
+        text: '21/04125/FUL'
       }
     },
     {
       key: {
-        text: 'Applicant'
+        text: 'Deadline'
       },
       value: {
-        text: 'Rachel Silver'
-      }
-    },
-    {
-      key: {
-        text: 'Local planning authority'
-      },
-      value: {
-        text: 'Bristol City Council'
-      }
-    },
-    {
-      key: {
-        text: 'Appeal type'
-      },
-      value: {
-        text: 'Full appeal'
+        text: '7' | daysInFuture
       }
     }
   ]
