Small updates to IP work and change to index

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -102,15 +102,11 @@
         Interested parties
       </h2>
 
-      <p class="govuk-body">
-        Interested parties can <a href="/interested/" class="govuk-link govuk-link--no-visited-state">find and comment on appeals</a>.
-      </p>
-
-      <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
-        Find an appeal
-      </h3>
-
       <ul class="govuk-list govuk-list--bullet">
+
+        <li>
+          <a href="/interested/" class="govuk-link govuk-link--no-visited-state">Comment on a planning appeal</a>
+        </li>
         <li>
           <a href="interested/find-appeal/v6/guidance">Guidance: Comment on a planning appeal</a>
         </li>
@@ -120,7 +116,7 @@
       </ul>
 
       <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
-        Appeals
+        Appeal states
       </h3>
 
       <ul class="govuk-list govuk-list--bullet">
@@ -136,7 +132,7 @@
       </ul>
 
       <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
-        Comment on an appeal
+        LPA email to comment on an appeal
       </h3>
 
       <ul class="govuk-list govuk-list--bullet">
