--- a/app/views/manage/appeals/v3/index.html
+++ b/app/views/manage/appeals/v3/index.html
@@ -45,7 +45,7 @@
           Interested parties notified
         </h3>
         <p class="govuk-body">
-          Notice for appeal 04125 has been sent to 3 recipients.
+          Notice for appeal 1345264 has been sent to 3 recipients.
         </p>
       {% endset %}
       {{ govukNotificationBanner({
