--- a/app/views/manage/emails/v1/appeal-valid.html
+++ b/app/views/manage/emails/v1/appeal-valid.html
@@ -19,14 +19,14 @@
   <p>
     Appeal site: 11 Gifford Way, Sampleford, BS15 2AP
     <br>
-    Appeal reference: 21/04125/FUL
+    Appeal reference: 1345260
   </p>
 
   <br>
 
   <p>Dear {{ data['dashboard-lpa'] }},</p>
 
-  <p>The appeal for application 1345260 has been validated and you can now submit your questionnaire.</p>
+  <p>The appeal for application 21/04125/FUL has been validated and you can now submit your questionnaire.</p>
 
   <p>This is due by {{ 7 | daysInFuture }}</p>
 
