--- a/app/views/index.html
+++ b/app/views/index.html
@@ -64,11 +64,11 @@
       </h2>
 
       <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
-        Common journeys and patterns
+        Service start points
       </h3>
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          <a href="/manage/emails/">Emails</a>
+          <a href="/manage/emails/">Emails to the LPA</a>
         </li>
         <li>
           <a href="manage/access/">Service start page</a>
@@ -82,9 +82,12 @@
       </ul>
 
       <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
-        Appeal processes
+        Appeal tasks
       </h3>
       <ul class="govuk-list govuk-list--bullet">
+        <li>
+          <a href="manage/notify/">Notify interested parties</a>
+        </li>
         <li>
           <a href="manage/questionnaire/">Questionnaire</a>
         </li>
@@ -113,6 +116,9 @@
         <li>
           <a href="interested/find-appeal/v6/appeal-search-address">Find an appeal</a>
         </li>
+        <li>
+          <a href="interested/comment/v6/your-name">Comment on an appeal</a>
+        </li>
       </ul>
 
       <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
@@ -132,7 +138,7 @@
       </ul>
 
       <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
-        LPA email to comment on an appeal
+        LPA email Notice to interested parties
       </h3>
 
       <ul class="govuk-list govuk-list--bullet">
