Updates to LPA work and the index

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -108,7 +108,11 @@
       <ul class="govuk-list govuk-list--bullet">
 
         <li>
-          <a href="/interested/" class="govuk-link govuk-link--no-visited-state">Comment on a planning appeal</a>
+          <a href="/interested/" class="govuk-link govuk-link--no-visited-state">Comment on a planning appeal (summary of progress)</a>
+        </li>
+        <br>
+        <li>
+          <a href="interested/find-appeal/v6/appeal-notice-email-full">Notice of an appeal from LPA</a>
         </li>
         <li>
           <a href="interested/find-appeal/v6/guidance">Guidance: Comment on a planning appeal</a>
@@ -137,21 +141,10 @@
         </li>
       </ul>
 
-      <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
-        LPA email Notice to interested parties
-      </h3>
-
-      <ul class="govuk-list govuk-list--bullet">
-
-        <li>
-          <a href="interested/find-appeal/v6/appeal-notice-email-full">Notice of an appeal from LPA</a>
-        </li>
-        <li>
-          <a href="interested/comment/v6/your-name">Comment on an appeal</a>
-        </li>
-      </ul>
-
     {% endset -%}
+
+
+
 
     {{ govukTabs({
       items: [
@@ -189,11 +182,13 @@
       Prototype archive
     </h2>
 
-    <p>Previous prototypes from the beta are on a different railway app.</p>
+    <p>Previous prototypes are on a different railway app.</p>
 
-    <p>Some of the version numbers on here will not start at 1, that means the work was started on the old prototype and you can see the previous versions there.</p>
+    <p>Some of the version numbers on here do not start at 1, this means the work was started on an older version of the prototype and you can see previous work there.</p>
 
-    <p><a href="https://appeals-archive.up.railway.app/">View the archive</a> (username: tim, password: password)</p>
+    <p>
+      <a href="https://appealz.up.railway.app/">
+        View the archive</a> (username is tim, password is password)</p>
 
 
   </div>
