--- a/app/views/interested/index.html
+++ b/app/views/interested/index.html
@@ -32,7 +32,7 @@
     </h2>
 
     <p class="govuk-body">
-      This is the on-going design work for interested parties, finding and commenting on an appeal.
+      This is the on-going design work for interested parties, finding and commenting on an appeal. Includes appeals at different stages, open, closed and completed.
     </p>
 
     <p class="govuk-body">
@@ -40,7 +40,7 @@
     </p>
 
     <ul class="govuk-list govuk-list--bullet">
-      <li>some content updates</li>
+      <li>content updates</li>
       <li>only using tabs when there is a decision</li>
       <li>changed some language ‘Comments’ > ‘Comment’ for the find journey</li>
     </ul>
