--- a/app/views/manage/notify/index.html
+++ b/app/views/manage/notify/index.html
@@ -30,10 +30,11 @@
       }) }}
     </h2>
 
-    <!-- <p class="govuk-!-margin-bottom-2">Changes:</p>
+    <p class="govuk-!-margin-bottom-2">Changes:</p>
     <ul class="govuk-list govuk-list--bullet">
-      <li>Minor copy tweaks</li>
-    </ul> -->
+      <li>Added a print option</li>
+      <li>Combined check recipients list</li>
+    </ul>
 
     {{ govukButton({
       html: 'View prototype',
