--- a/app/views/manage/notify/v1/send-new.html
+++ b/app/views/manage/notify/v1/send-new.html
@@ -43,6 +43,10 @@
             {
               html: 'Letters by post',
               value: 'letters'
+            },
+            {
+              html: 'Print a notice',
+              value: 'print'
             }
           ]
         }) }}
