LPAs notify IPs

--- a/app/views/manage/notify/index.html
+++ b/app/views/manage/notify/index.html
@@ -34,6 +34,7 @@
     <ul class="govuk-list govuk-list--bullet">
       <li>Added a print option</li>
       <li>Combined check recipients list</li>
+      <li>Dummy counting logic for sent notices</li>
     </ul>
 
     {{ govukButton({
